Fix incorrect text alignment in contenteditable div.

--- a/extension/content.css
+++ b/extension/content.css
@@ -33,11 +33,10 @@
     background: transparent!important;
     -webkit-text-fill-color: transparent!important;
     -webkit-text-stroke: transparent!important;
-    box-shadow: none;
+    box-shadow: none!important;
     outline: none!important;
     pointer-events: none!important;
     resize: none!important;
-    scrollbar-width: none!important;
 }
 #tsc-highlight-overlay-ce *:not(tsc-error-highlight) {
     color: transparent!important;
